# irsip

./: .gitignore  CMakeLists.txt  main.cpp
algo/: cbisp.cpp  cbisp.h
include/: compress_process.h
